# trueodds

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: push-snapshot.yml  refresh-data.yml
app/: README.md  RELEASE.md  build_release.bat  pubspec.yaml
app/android/app/: build.gradle.kts
app/lib/: about.dart  api.dart  beat_model.dart  beat_model_screen.dart  brand.dart  crests.dart  favorites.dart  home_screen.dart  live_prob.dart  main.dart  match_detail.dart  news.dart  onboarding.dart  predict.dart  predictors.dart  search.dart  sports_screen.dart  team_avatar.dart  theme.dart  track_record.dart  widgets.dart
app/lib/models/: predict.dart
app/lib/screens/: about.dart  beat_model_screen.dart  home_screen.dart  match_detail.dart  news.dart  onboarding.dart  search.dart  sports_screen.dart  track_record.dart
app/lib/services/: api.dart  beat_model.dart  config.dart  notifications.dart
app/lib/sports/: basketball_tab.dart  clubs_tab.dart  elo_tab.dart  nfl_tab.dart  tennis_tab.dart
app/lib/widgets/: live_prob.dart  skeleton.dart  team_avatar.dart  trust.dart  widgets.dart
app/tool/: apply_android_icons.py  apply_premium.py  make_icons.py  make_premium.py  make_variants.py
app/web/: index.html  manifest.json
data/: crests.json
docs/: CLOUD_PUSH.md  DESIGN.md  design-preview.html  supabase_schema.sql
scripts/: push_snapshot.bat
src/sports_model/: __init__.py  api.py  config.py  crests.py  db.py  main.py  news.py  push.py  report.py
src/sports_model/betting/: __init__.py  edge_hunt.py  ledger.py  (+2 more)
tests/: test_main.py
(+36 files in other folders)
