[project]
name = "sports-model"
version = "0.1.0"
description = "Sports modeling project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "scikit-learn>=1.4",
    "nba_api>=1.4",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
